--- a/style.css
+++ b/style.css
@@ -221,6 +221,11 @@ body{
 .card p{
     margin-bottom: 20px;
 }
+
+.card .card-bottom{
+    width: 100%;
+    height: 50%;
+}
 .title{
     margin-bottom: 15px;
     color: black;
@@ -316,6 +321,7 @@ body{
 .contact-form input{
     width: 400px;
     border: none;
+    outline: none;
     border-radius: 20px;
     padding: 15px 20px;
     margin-bottom: 10px;
